// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Auth component Is matched to snapshots should match to logged snapshot 1`] = `
<div>
  <div
    class="wrapper"
  >
    <div>
      test user
    </div>
    <button
      class="Danger Button"
      data-testid="logout"
      type="button"
    >
      logout
    </button>
  </div>
</div>
`;

exports[`Testing Auth component Is matched to snapshots should match to unlogged snapshot 1`] = `
<div>
  <div
    class="wrapper"
  >
    <button
      class="Auth Button"
      data-testid="register"
      type="button"
    >
      register
    </button>
    <button
      class="Auth Button"
      data-testid="login"
      type="button"
    >
      login
    </button>
  </div>
</div>
`;
